src/snapshots/alma__parser__tests__expression_parser-10.snap
---
source: src/parser.rs
expression: "parse(\"\\\"\\n\\\"\")"

---
Input:

"
"

Result:

Node {
    start: 0,
    end: 3,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: String_(
            "\n",
        ),
    },
}
