src/snapshots/alma__parser__tests__expression_parser-12.snap
---
source: src/parser.rs
expression: "parse(\"(\\\"\\\")\")"

---
Input:

("")

Result:

Node {
    start: 1,
    end: 3,
    line: 1,
    column: 1,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: String_(
            SymbolU32 {
                value: 1,
            },
        ),
    },
}
