src/snapshots/alma__parser__tests__expression_parser-13.snap
---
source: src/parser.rs
expression: "parse(\"(((1)))\")"

---
Input:

(((1)))

Result:

Node {
    start: 3,
    end: 4,
    line: 1,
    column: 3,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Float(
            1.0,
        ),
    },
}
