src/snapshots/alma__parser__tests__expression_parser-14.snap
---
source: src/parser.rs
expression: "parse(\"(((1))\")"

---
Input:

(((1))

Result:

1:6: Expected ')' after parenthesized expression, but instead found: '[End of file]'

  1│  (((1))
   │  ↑

Error {
    message: "1:6: Expected ')' after parenthesized expression, but instead found: '[End of file]'\n\n  1│  (((1))\n   │  ↑",
    token: Token {
        kind: Eof,
        position: 6,
        end_position: 6,
        lexeme: "[End of file]",
        line: 1,
        column: 6,
        indent: 0,
    },
}
