src/snapshots/alma__parser__tests__expression_parser-15.snap
---
source: src/parser.rs
expression: "parse(\"(((1))))\")"

---
Input:

(((1))))

Result:

1:7: Expected the end of input, but instead found: `)`

  1│  (((1))))
   │         ↑

Error {
    message: "1:7: Expected the end of input, but instead found: `)`\n\n  1│  (((1))))\n   │         ↑",
    token: Token {
        kind: RightParen,
        position: 7,
        end_position: 8,
        lexeme: ")",
        line: 1,
        column: 7,
        indent: 0,
    },
}
