src/snapshots/alma__parser__tests__expression_parser-16.snap
---
source: src/parser.rs
expression: "parse(\"(\n  ((1))\n)\")"

---
Input:

(
  ((1))
)

Result:

Node {
    start: 6,
    end: 7,
    line: 2,
    column: 4,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Float(
            1.0,
        ),
    },
}
