src/snapshots/alma__parser__tests__expression_parser-17.snap
---
source: src/parser.rs
expression: "parse(\"fun arg\")"

---
Input:

fun arg

Result:

Node {
    start: 0,
    end: 7,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 3,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 0,
                            end: 3,
                            line: 1,
                            column: 0,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ),
                },
            },
            [
                Node {
                    start: 4,
                    end: 7,
                    line: 1,
                    column: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            Node {
                                start: 4,
                                end: 7,
                                line: 1,
                                column: 4,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                },
            ],
        ),
    },
}
