src/snapshots/alma__parser__tests__expression_parser-18.snap
---
source: src/parser.rs
expression: "parse(\"fun\\n arg\")"

---
Input:

fun
 arg

Result:

Node {
    start: 0,
    end: 8,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 3,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 0,
                            end: 3,
                            line: 1,
                            column: 0,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ),
                },
            },
            [
                Node {
                    start: 5,
                    end: 8,
                    line: 2,
                    column: 1,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            Node {
                                start: 5,
                                end: 8,
                                line: 2,
                                column: 1,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                },
            ],
        ),
    },
}
