src/snapshots/alma__parser__tests__expression_parser-19.snap
---
source: src/parser.rs
expression: "parse(\"  fun\\n    arg\")"

---
Input:

  fun
    arg

Result:

Node {
    start: 2,
    end: 13,
    line: 1,
    column: 2,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 2,
                end: 5,
                line: 1,
                column: 2,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: 2,
                                end: 5,
                                line: 1,
                                column: 2,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
            [
                Node {
                    start: 10,
                    end: 13,
                    line: 2,
                    column: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            None,
                            Identifier(
                                Node {
                                    start: 10,
                                    end: 13,
                                    line: 2,
                                    column: 4,
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 2,
                                        },
                                    },
                                },
                            ),
                        ),
                    },
                },
            ],
        ),
    },
}
