src/snapshots/alma__parser__tests__expression_parser-2.snap
---
source: src/parser.rs
expression: "parse(\"False\")"

---
Input:

False

Result:

Node {
    start: 0,
    end: 5,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Bool(
            false,
        ),
    },
}
