src/snapshots/alma__parser__tests__expression_parser-20.snap
---
source: src/parser.rs
expression: "parse(\"fun\\narg\")"

---
Input:

fun
arg

Result:

2:0: Expected the end of input, but instead found: 'arg'

  1│  fun
  2│  arg
   │  ↑↑↑

Error {
    message: "2:0: Expected the end of input, but instead found: \'arg\'\n\n  1│  fun\n  2│  arg\n   │  ↑↑↑",
    token: Token {
        kind: Identifier,
        position: 4,
        end_position: 7,
        lexeme: "arg",
        line: 2,
        column: 0,
        indent: 0,
    },
}
